# mnemnk-lifelogging-agents

./: .gitignore  Cargo.toml  README.md  logging.json  mnemnk.json
mnemnk-api/: Cargo.toml  README.md
mnemnk-api/src/: main.rs
mnemnk-application/: Cargo.toml  README.md
mnemnk-application/src/: main.rs
mnemnk-screen/: Cargo.toml  README.md
mnemnk-screen/src/: main.rs
