[workspace]
members = [
    "mnemnk-application",
    "mnemnk-screen",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[workspace.package]
edition = "2021"
authors = ["Akira Ishino <akira@lumilab.jp>"]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/mnemnk/mnemnk-lifelogging-agents"
