[package]
name = "mnemnk-api"
version = "0.4.0"
description = "Mnemnk agent of API server"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "mnemnk-api"
path = "src/main.rs"
test = false
bench = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = "0.8"
axum-auth = { version = "0.8", features = ["auth-bearer"] }
base64 = "0.22"
rand = "0.9"
tower-http = { version = "0.6", features = ["timeout"] }
