[package]
name = "mnemnk-screen"
version = "0.5.0"
description = "Mnemnk agent for capturing screen"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "mnemnk-screen"
path = "src/main.rs"
test = false
bench = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
base64 = "0.22.1"
image = "0.25.5"
xcap = "0.3.1"
